[gd_scene load_steps=6 format=3 uid="uid://cw4u0cushw2j1"]

[ext_resource type="Script" path="res://scenes/costumize_pet/character_costumize.gd" id="1_tx3qe"]
[ext_resource type="PackedScene" uid="uid://dppjchrp5io0f" path="res://scenes/pet/pet.tscn" id="2_umgjk"]
[ext_resource type="PackedScene" uid="uid://dut2fm7cqngup" path="res://scenes/misc/clickable/clickable_tab_part.tscn" id="3_y5quc"]
[ext_resource type="Script" path="res://scripts/show_parts.gd" id="4_ameph"]
[ext_resource type="PackedScene" uid="uid://dq5jw5oofwekp" path="res://scenes/misc/clickable/clickable_change_scene.tscn" id="5_eujcc"]

[node name="Character_Customize" type="Node2D"]
script = ExtResource("1_tx3qe")

[node name="Pet" parent="." instance=ExtResource("2_umgjk")]
position = Vector2(296, 636)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 106.0
offset_top = 31.0
offset_right = 258.0
offset_bottom = 51.0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
metadata/_edit_group_ = true

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 1
columns = 6

[node name="Tab_Bodies" parent="MarginContainer/GridContainer" instance=ExtResource("3_y5quc")]
layout_mode = 2

[node name="Tab_Eyes" parent="MarginContainer/GridContainer" instance=ExtResource("3_y5quc")]
layout_mode = 2

[node name="Tab_Mouths" parent="MarginContainer/GridContainer" instance=ExtResource("3_y5quc")]
layout_mode = 2

[node name="Tab_Hats" parent="MarginContainer/GridContainer" instance=ExtResource("3_y5quc")]
layout_mode = 2

[node name="Body_Picker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="Body_Picker"]
layout_mode = 0
offset_left = 106.0
offset_top = 51.0
offset_right = 449.0
offset_bottom = 151.0
horizontal_scroll_mode = 2
vertical_scroll_mode = 0
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Body_Picker/ScrollContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
color = Color(0.0980392, 0.466667, 0.372549, 1)

[node name="Body_Parts" type="GridContainer" parent="Body_Picker/ScrollContainer/ColorRect"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
script = ExtResource("4_ameph")

[node name="Eyes_Parts" type="GridContainer" parent="Body_Picker/ScrollContainer/ColorRect"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
script = ExtResource("4_ameph")

[node name="Mouth_Parts" type="GridContainer" parent="Body_Picker/ScrollContainer/ColorRect"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
script = ExtResource("4_ameph")

[node name="Hat_Parts" type="GridContainer" parent="Body_Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
script = ExtResource("4_ameph")

[node name="Main_Hub" parent="." instance=ExtResource("5_eujcc")]
offset_left = 171.0
offset_top = 246.0
offset_right = 171.0
offset_bottom = 246.0
